--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <label for="file" class="form-label">Добавьте файл json</label>
           <input class="form-control" type="file" id="file" />
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between flex-wrap">
           <button type="button" class="btn btn-primary" id="btn-create-form">
             Создать форму
           </button>
@@ -37,9 +37,7 @@
           </button>
         </div>
         <hr />
-        <div class="form-container">
-         
-        </div>
+        <div class="form-container"></div>
       </div>
     </main>
     <!-- JavaScript Bundle with Popper -->
@@ -48,6 +46,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="./lab/jquery-3.6.0.min.js"></script>
+    <script src="./lab/jquery.maskedinput/jquery.maskedinput.js"></script>
+    <script src="./lab/jquery.maskedinput/jquery.maskedinput.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
